--- a/src/components/App.css
+++ b/src/components/App.css
@@ -36,3 +36,20 @@
     transform: rotate(360deg);
   }
 }
+
+body{
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(45deg, orange, #ffc107);
+}
+
+.home-page {
+  text-align: center;
+  margin-top: 50px;
+}
+
+.home-page h1 {
+  font-size: 32px;
+  color: #333;
+  font-weight: bold;
+}
